# src/api/types.ts
@@ -5,6 +5,8 @@ export type GoogleLoginResponse = ApiSchemas['GoogleLoginResponse']
 export type UserResponse = ApiSchemas['UserResponse']
 export type UpdateMeRequest = ApiSchemas['UpdateMeRequest']
 export type JobListResponse = ApiSchemas['JobListResponse']
+export type JobAxesResponse = ApiSchemas['JobAxesResponse']
+export type JobAxis = ApiSchemas['JobAxis']
 export type DiagnosisResponse = ApiSchemas['DiagnosisResponse']
 export type CharacterSummary = ApiSchemas['CharacterSummary']
 export type CreateRoadmapRequest = ApiSchemas['CreateRoadmapRequest']
